[package]
name = "fixed-index-vec"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A vector-like data structure whose indices do not change when elements are removed."
repository = "https://github.com/calteran/fixed-index-vec"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
